@@ -917,6 +917,10 @@ PRESERVE-UID-GID and PRESERVE-EXTENDED-ATTRIBUTES are completely ignored."
 	 (kill-buffer (tramp-get-connection-buffer v))
 	 (setq ret 1)))
 
+      ;; Handle signals.
+      (when (and (natnump ret) (> ret 128))
+	(setq ret (format "Signal %d" (- ret 128))))
+
       ;; Provide error file.
       (when tmpstderr (rename-file tmpstderr (cadr destination) t))
 
