@@ -3137,6 +3137,10 @@ STDERR can also be a file name."
 	 (kill-buffer (tramp-get-connection-buffer v))
 	 (setq ret 1)))
 
+      ;; Handle signals.
+      (when (and (natnump ret) (> ret 128))
+	(setq ret (format "Signal %d" (- ret 128))))
+
       ;; Provide error file.
       (when tmpstderr (rename-file tmpstderr (cadr destination) t))
 
