@@ -1,3 +1,8 @@
+2020-05-07  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-adb.el (tramp-adb-handle-process-file):
+	* tramp-sh.el (tramp-sh-handle-process-file): Handle signals.
+
 2020-05-06  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-adb.el (tramp-adb-send-command-and-check): Add optional
